--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 Django==5.1.4
 django-environ==0.11.2
 djangorestframework==3.15.2
-psycopg2-binary==2.9.10 
+psycopg2-binary==2.9.10
+django-allauth==0.52.0
+dj-rest-auth[with_social]==4.0.0
