--- a/.env.sample
+++ b/.env.sample
@@ -9,3 +9,15 @@ DB_USER=
 DB_PASSWORD=
 DB_HOST=
 DB_PORT=
+
+# Mail
+EMAIL_HOST=
+EMAIL_USE_TLS=
+EMAIL_PORT=
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
+DEFAULT_FROM_EMAIL=
+
+# Auth
+EMAIL_CONFIRM_REDIRECT_BASE_URL=
+PASSWORD_RESET_CONFIRM_REDIRECT_BASE_URL=
